tests/sparql/test_suites/internal/ill-typed/good_queries/database/float.rq
PREFIX : <http://www.path.com/>
SELECT ?o (STR(?o) AS ?str)
WHERE {
  ?s :float ?o
}
ORDER BY ?s
